@@ -1,5 +1,8 @@
 Revision history for Perl extension Archive::Zip
 
+  - fixed http://rt.cpan.org/Public/Bug/Display.html?id=27463 with a regression
+    test - cannot add files whose entire filenames are "0". (SHLOMIF).
+
 1.20 Tue  5 Jun 2007 - Adam Kennedy
   - Removing dependency on File::Which due to public outburst of flaming
     on cpanra(n)tings by H.Merijn Brand. Try a simple email next time. :(
